# TexasSolver

./: CMakeLists.txt  README.md  TexasSolverGui.pro
src/tools/: PrivateRangeConverter.cpp
